--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-game-backend-admin",
+  "name": "@open-game-backend/admin",
   "version": "0.1.0",
   "private": false,
   "scripts": {
