--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "@open-game-backend/admin",
   "version": "0.1.0",
+  "homepage": "https://github.com/open-game-backend/admin",
+  "bugs": "https://github.com/open-game-backend/admin/issues",
+  "license": "MIT",
+  "files": ["dist/**"],
+  "repository": "github:open-game-backend/admin",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
