--- a/package.json
+++ b/package.json
@@ -1,33 +1,35 @@
 {
   "name": "@open-game-backend/admin",
   "version": "0.1.2",
-  "homepage": "https://github.com/open-game-backend/admin",
-  "bugs": "https://github.com/open-game-backend/admin/issues",
-  "license": "MIT",
-  "files": ["dist/**", "public/**", "src/**", "babel.config.js"],
-  "repository": "github:open-game-backend/admin",
   "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "files": [
+    "dist/**",
+    "public/**",
+    "src/**",
+    "babel.config.js"
+  ],
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "pubsub-js": "^1.8.0",
-    "vue": "^2.6.11",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.5.1"
+    "vue": "^3.0.0-beta.1",
+    "vue-router": "^4.0.0-rc.5",
+    "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-service": "~4.4.0",
+    "@vue/compiler-sfc": "^3.0.0-beta.1",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "eslint-plugin-vue": "^7.0.0-alpha.0",
+    "vue-cli-plugin-vue-next": "~0.1.4"
   },
   "eslintConfig": {
     "root": true,
@@ -35,7 +37,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential",
+      "plugin:vue/vue3-essential",
       "eslint:recommended"
     ],
     "parserOptions": {
@@ -47,5 +49,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "bugs": "https://github.com/open-game-backend/admin/issues",
+  "homepage": "https://github.com/open-game-backend/admin",
+  "license": "MIT",
+  "repository": "github:open-game-backend/admin"
 }
