--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pubsub-js": "^1.8.0",
     "vue": "^3.0.0-beta.1",
     "vue-router": "^4.0.0-rc.5",
-    "vuex": "^4.0.0-alpha.1"
+    "vuex": "^4.0.0-alpha.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
