--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel.config.js"
   ],
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.1",
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "pubsub-js": "^1.8.0",
