--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   ],
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "pubsub-js": "^1.8.0",
     "vue": "^3.0.0-beta.1",
     "vue-router": "^4.0.0-rc.5",
